--- a/Catedral.html
+++ b/Catedral.html
@@ -12,10 +12,10 @@
 <body>
     <section class="contenedor">
         <header>
-            <a href="Antigua.html" class="antiguaweb"><img src="Iglesias/ANTIGUAWEB.png" alt=""></a>
+            <a href="index.html" class="antiguaweb"><img src="Iglesias/ANTIGUAWEB.png" alt=""></a>
             <nav>
                 <ul>
-                    <li><a href="Antigua.html">Inicio</a></li>
+                    <li><a href="index.html">Inicio</a></li>
                     <li><a href="calvario.html">EL Calvario</a></li>
                     <li><a href="merced.html">La Merced</a></li>
                     <li><a href="EdeC.html">Escuela de Cristo</a></li>
