--- a/Fuente.html
+++ b/Fuente.html
@@ -12,10 +12,10 @@
 <body>
     <section class="contenedor">
         <header>
-            <a href="Antigua.html" class="antiguaweb"><img src="img/ANTIGUAWEB.png" alt=""></a>
+            <a href="index.html" class="antiguaweb"><img src="img/ANTIGUAWEB.png" alt=""></a>
             <nav>
                 <ul>
-                    <li><a href="Antigua.html">Inicio</a></li>
+                    <li><a href="index.html">Inicio</a></li>
                     <li><a href="Parque central.html">Parque Central</a></li>
                     <li><a href="La cruz.html">Cerro de la Cruz</a></li>
                     <li><a href="Pasos.html">Calle de los Pasos</a></li>
