--- a/Viernes.html
+++ b/Viernes.html
@@ -12,10 +12,10 @@
 <body>
     <section class="contenedor">
         <header>
-            <a href="Antigua.html" class="antiguaweb"><img src="img/ANTIGUAWEB.png" alt=""></a>
+            <a href="index.html" class="antiguaweb"><img src="img/ANTIGUAWEB.png" alt=""></a>
             <nav>
                 <ul>
-                    <li><a href="Antigua.html">Inicio</a></li>
+                    <li><a href="index.html">Inicio</a></li>
                     <li><a href="Cuaresma.html">Cuaresmas</a></li>
                     <li><a href="domingo.html">Domingo de Ramos</a></li>
                     <li><a href="alfombras.html">Alfrombras</a></li>
