--- a/alfombras.html
+++ b/alfombras.html
@@ -15,7 +15,7 @@
             <a href="Antigua.html" class="antiguaweb"><img src="img/ANTIGUAWEB.png" alt=""></a>
             <nav>
                 <ul>
-                    <li><a href="Antigua.html">Inicio</a></li>
+                    <li><a href="index.html">Inicio</a></li>
                     <li><a href="Cuaresma.html">Cuaresmas</a></li>
                     <li><a href="Viernes.html">Viernes Santo</a></li>
                     <li><a href="domingo.html">Domingo de Ramos</a></li>
